# electromagnetic-field

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  CalcMesh.cpp  CalcMesh.h  CalcNode.cpp  CalcNode.h  ConductorElement.cpp  ConductorElement.h  README.md  dipole.cpp  main.cpp  vector3D.cpp  vector3D.h
Dipole/: dipole.cpp
Models/: dipole.cpp  plane.cpp  ring.cpp  solenoid.cpp
Ring/: ring.cpp
examples/: CMakeLists.txt  dipole.cpp  plane.cpp  ring.cpp  solenoid.cpp
include/: CMakeLists.txt  CalcMesh.h  CalcNode.h  ConductorElement.h  Grid.h  Node.h  vec3.h
src/: CMakeLists.txt  CalcMesh.cpp  CalcNode.cpp  ConductorElement.cpp  Grid.cpp  Node.cpp  vec3.cpp  vector3D.cpp
